# sparkify-lake

./: .gitignore  README.md  pyproject.toml
sparkify_lake/: dl.cfg  etl.py  etl_test.ipynb  test.ipynb
tests/: test_sparkify_lake.py
