[tool.poetry]
name = "sparkify-lake"
version = "0.1.0"
description = ""
authors = ["K S <8283247+sunnykan@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.2.0"
jupyterlab = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.28.0"
black = "^21.9b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
